--- a/Email_classifier/email_classifier.ipynb
+++ b/Email_classifier/email_classifier.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "d939b503",
    "metadata": {
     "execution": {
@@ -53,7 +53,7 @@
        "True"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "3274cdfd",
    "metadata": {
     "execution": {
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "b8850f59",
    "metadata": {
     "execution": {
@@ -870,7 +870,7 @@
        "4   ham  Subject: re : indian springs\\r\\nthis deal is t...          0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "391634a3",
    "metadata": {
     "execution": {
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "8dc53a7e",
    "metadata": {
     "execution": {
@@ -958,7 +958,7 @@
        "Name: clean_text, dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "a160da1d",
    "metadata": {
     "execution": {
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "7a5d1d91",
    "metadata": {
     "execution": {
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "0db720cd",
    "metadata": {
     "execution": {
@@ -1064,6 +1064,8 @@
      "text": [
       "Naive Bayes Accuracy: 0.92\n",
       "-----------------------------------------------------\n",
+      "Confusion metrix for MultinomialNB() is [[742   0]\n",
+      " [ 81 212]]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.90      1.00      0.95       742\n",
@@ -1073,19 +1075,23 @@
       "   macro avg       0.95      0.86      0.89      1035\n",
       "weighted avg       0.93      0.92      0.92      1035\n",
       "\n",
-      "DTC Accuracy: 0.96\n",
+      "DTC Accuracy: 0.95\n",
       "-----------------------------------------------------\n",
+      "Confusion metrix for DecisionTreeClassifier() is [[716  26]\n",
+      " [ 21 272]]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.97      0.97      0.97       742\n",
-      "           1       0.93      0.93      0.93       293\n",
+      "           0       0.97      0.96      0.97       742\n",
+      "           1       0.91      0.93      0.92       293\n",
       "\n",
-      "    accuracy                           0.96      1035\n",
-      "   macro avg       0.95      0.95      0.95      1035\n",
-      "weighted avg       0.96      0.96      0.96      1035\n",
+      "    accuracy                           0.95      1035\n",
+      "   macro avg       0.94      0.95      0.94      1035\n",
+      "weighted avg       0.95      0.95      0.95      1035\n",
       "\n",
       "GNB Accuracy: 0.94\n",
       "-----------------------------------------------------\n",
+      "Confusion metrix for GaussianNB() is [[718  24]\n",
+      " [ 36 257]]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.95      0.97      0.96       742\n",
@@ -1094,10 +1100,7 @@
       "    accuracy                           0.94      1035\n",
       "   macro avg       0.93      0.92      0.93      1035\n",
       "weighted avg       0.94      0.94      0.94      1035\n",
-      "\n",
-      "\n",
-      "Best Model:\n",
-      "DTC with Accuracy: 0.96\n"
+      "\n"
      ]
     }
    ],
@@ -1105,12 +1108,15 @@
     "# Define models\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn import svm\n",
     "\n",
     "\n",
     "models = {\n",
     "    \"Naive Bayes\": MultinomialNB(),\n",
     "    \"DTC\": DecisionTreeClassifier(),\n",
     "    \"GNB\": GaussianNB()\n",
+    "    \n",
     "}\n",
     "\n",
     "best_results = {}\n",
@@ -1128,6 +1134,8 @@
     "    # Display accuracy and classification report for the current model\n",
     "    print(f\"{name} Accuracy: {accuracy:.2f}\")\n",
     "    print(\"-----------------------------------------------------\")\n",
+    "    cf_metrix = confusion_matrix(y_test, y_pred)\n",
+    "    print(f'Confusion metrix for {model} is {cf_metrix}')\n",
     "    print(classification_report(y_test, y_pred))\n",
     "\n",
     "    # Check if this is the best accuracy so far\n",
